force-app/main/default/objects/EmailMessage/fields/ICX_CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>ICX_CreatedBy_Name__c</fullName>
    <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICX CreatedBy Name</label>
    <type>Text</type>
</CustomField>