force-app/main/default/objects/EmailMessage/fields/ICX_ToAddress_InitialQueue__c.field-meta.xml
<CustomField>
    <fullName>ICX_ToAddress_InitialQueue__c</fullName>
    <description>[ICONiCS] get the initial queue email
Store the value in this field before changing the ToAddress standard field (EmailMessage trigger). Especially when the email is sent to the old queue email (contact_[country]@louisvuitton.com). This email format should be removed in a near future (maybe end 2018)</description>
    <label>To Address - Initial Queue</label>
    <type>Email</type>
</CustomField>