force-app/main/default/objects/EmailMessage/validationRules/block_mailer_Deamon.validationRule-meta.xml
<ValidationRule>
    <fullName>block_mailer_Deamon</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 FromAddress = &apos;mailer-daemon@mx08-0024c501.pphosted.com&apos;,
 Subject = &apos;Returned mail: see transcript for details&apos;
)</errorConditionFormula>
    <errorMessage>blocked  &apos;Returned mail: see transcript for details&apos;</errorMessage>
</ValidationRule>